--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,5 +25,5 @@ android {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:${_reactNativeVersion}'
+    compile "com.facebook.react:react-native:${_reactNativeVersion}"
 }
